--- a/templates/register.html
+++ b/templates/register.html
@@ -10,14 +10,14 @@
   <body>
     <div class="wrapper">
       <img src="/static/images/logo1.png" />
-      <div class="title">New Institute</div>
+      <div class="title" data-translate>New Institute</div>
       <div class="form">
         <div class="inputfield">
-          <label>College name</label>
+          <label data-translate>College name</label>
           <input id="college-name" type="text" class="input" />
         </div>
         <div class="inputfield">
-          <label>Institute type</label>
+          <label data-translate>Institute type</label>
           <input id="institute-type" type="text" class="input" />
         </div>
         <!-- <div class="inputfield">
@@ -29,55 +29,55 @@
           <input type="password" class="input" />
         </div> -->
         <div class="inputfield">
-          <label>State</label>
+          <label data-translate>State</label>
           <div class="custom_select">
             <select id="state">
-              <option value="">Select State</option>
-              <option value="Andhra Pradesh">Andhra Pradesh</option>
-              <option value="Arunachal Pradesh">Arunachal Pradesh</option>
-              <option value="Assam">Assam</option>
-              <option value="Bihar">Bihar</option>
-              <option value="Chhattisgarh">Chhattisgarh</option>
-              <option value="Goa">Goa</option>
-              <option value="Gujarat">Gujarat</option>
-              <option value="Haryana">Haryana</option>
-              <option value="Himachal Pradesh">Himachal Pradesh</option>
-              <option value="Jharkhand">Jharkhand</option>
-              <option value="Karnataka">Karnataka</option>
-              <option value="Kerala">Kerala</option>
-              <option value="Madhya Pradesh">Madhya Pradesh</option>
-              <option value="Maharashtra">Maharashtra</option>
-              <option value="Manipur">Manipur</option>
-              <option value="Meghalaya">Meghalaya</option>
-              <option value="Mizoram">Mizoram</option>
-              <option value="Nagaland">Nagaland</option>
-              <option value="Odisha">Odisha</option>
-              <option value="Punjab">Punjab</option>
-              <option value="Rajasthan">Rajasthan</option>
-              <option value="Sikkim">Sikkim</option>
-              <option value="Tamil Nadu">Tamil Nadu</option>
-              <option value="Telangana">Telangana</option>
-              <option value="Tripura">Tripura</option>
-              <option value="Uttar Pradesh">Uttar Pradesh</option>
-              <option value="Uttarakhand">Uttarakhand</option>
-              <option value="West Bengal">West Bengal</option>
+              <option value="" data-translate>Select State</option>
+              <option value="Andhra Pradesh" data-translate>Andhra Pradesh</option>
+              <option value="Arunachal Pradesh" data-translate>Arunachal Pradesh</option>
+              <option value="Assam" data-translate>Assam</option>
+              <option value="Bihar" data-translate>Bihar</option>
+              <option value="Chhattisgarh" data-translate>Chhattisgarh</option>
+              <option value="Goa" data-translate>Goa</option>
+              <option value="Gujarat" data-translate>Gujarat</option>
+              <option value="Haryana" data-translate>Haryana</option>
+              <option value="Himachal Pradesh" data-translate>Himachal Pradesh</option>
+              <option value="Jharkhand" data-translate>Jharkhand</option>
+              <option value="Karnataka" data-translate>Karnataka</option>
+              <option value="Kerala" data-translate>Kerala</option>
+              <option value="Madhya Pradesh" data-translate>Madhya Pradesh</option>
+              <option value="Maharashtra" data-translate>Maharashtra</option>
+              <option value="Manipur" data-translate>Manipur</option>
+              <option value="Meghalaya" data-translate>Meghalaya</option>
+              <option value="Mizoram" data-translate>Mizoram</option>
+              <option value="Nagaland" data-translate>Nagaland</option>
+              <option value="Odisha" data-translate>Odisha</option>
+              <option value="Punjab" data-translate>Punjab</option>
+              <option value="Rajasthan" data-translate>Rajasthan</option>
+              <option value="Sikkim" data-translate>Sikkim</option>
+              <option value="Tamil Nadu" data-translate>Tamil Nadu</option>
+              <option value="Telangana" data-translate>Telangana</option>
+              <option value="Tripura" data-translate>Tripura</option>
+              <option value="Uttar Pradesh" data-translate>Uttar Pradesh</option>
+              <option value="Uttarakhand" data-translate>Uttarakhand</option>
+              <option value="West Bengal" data-translate>West Bengal</option>
             </select>
           </div>
         </div>
         <div class="inputfield">
-          <label>Email Address</label>
+          <label data-translate>Email Address</label>
           <input id="email" type="text" class="input" />
         </div>
         <div class="inputfield">
-          <label>Contact Number</label>
+          <label data-translate>Contact Number</label>
           <input id="contact-number" type="text" class="input" />
         </div>
         <div class="inputfield">
-          <label>Address</label>
+          <label data-translate>Address</label>
           <textarea id="college-address" class="textarea"></textarea>
         </div>
         <div class="inputfield">
-          <label>Postal Code</label>
+          <label data-translate>Postal Code</label>
           <input id="postal-code" type="text" class="input" />
         </div>
         <div class="inputfield terms">
@@ -85,10 +85,10 @@
             <input id="check-box" type="checkbox" />
             <span class="checkmark"></span>
           </label>
-          <p>Agreed to terms and conditions</p>
+          <p data-translate>Agreed to terms and conditions</p>
         </div>
         <div class="inputfield">
-          <button id="register-button" type="submit" value="Register" class="btn" >Register</button>
+          <button id="register-button" type="submit" value="Register" class="btn" data-translate>Register</button>
         </div>
       </div>
     </div>
