--- a/templates/index.html
+++ b/templates/index.html
@@ -91,53 +91,32 @@
   <div class="inst">
     <div class="containers">
    <div class="card">
-      
-
-      
        <img src="/static/images/pmsc.png" >
        <div class="text">
-        <p>New Institute</p>
-          
+        <p data-translate>New Institute</p>          
       </div>
-       
-      
-       
-      
-        
     </div>
     <div class="card">
       <img src="/static/images/rural.png" >
       <div class="text">
-        <p>Existing Institute</p>
-          
+        <p data-translate>Existing Institute</p>
       </div>
-      
-      
     </div>
     <div class="card">
       <img src="/static/images/scholarship.png" >
       <div class="text">
-        <p>Online and Distance Learning</p>
-          
+        <p data-translate>Online and Distance Learning</p>
       </div>
-      
-        
     </div>
     <div class="card">
       <img src="/static/images/vidya.png" >
       <div class="text">
-        <p>Online Learning</p>
-          
+        <p data-translate>Online Learning</p>  
       </div>
-      
-        
     </div>
-    
-    
     </div>
-  
   <main class="curve">
-    <h1 class="faq-heading" style="text-align: center;">Frequently Asked Questions</h1>
+    <h1 class="faq-heading" style="text-align: center;" data-translate>Frequently Asked Questions</h1>
     <section class="faq-container" >
         <div class="faq-one">
           <!-- faq question -->
@@ -245,123 +224,73 @@
     <br><br><br><br>
   <div class="main">
     <div class="container">
-  
-  
-    
     <div class="glass-card">
-      
-
-      
        <img src="/static/images/pmsc.png" >
        <div class="vl"></div>
-
-      
-       
        <div class="text">
-          <p>Prime Minister's Special Scholarship Scheme(PMSS)</p>
-            
+          <p data-translate>Prime Minister's Special Scholarship Scheme(PMSS)</p>
         </div>
-        
     </div>
     <div class="glass-card">
       <img src="/static/images/rural.png" >
       <div class="vl"></div>
-      
-       
       <div class="text">
-         <p>Unnat Bharat Abhiyan in rural development process</p>
-           
+         <p data-translate>Unnat Bharat Abhiyan in rural development process</p>
        </div>
-        
     </div>
     <div class="glass-card">
       <img src="/static/images/scholarship.png" >
       <div class="vl"></div>
-      
-       
        <div class="text">
-          <p>National <br>E-Scholarship</p>
-            
+          <p data-translate>National <br>E-Scholarship</p>
         </div>
-        
     </div>
     <div class="glass-card">
       <img src="/static/images/vidya.png" >
       <div class="vl"></div>
-      
-       
        <div class="text">
-          <p>Vidya Lakshmi</p>
-            
+          <p data-translate>Vidya Lakshmi</p>
         </div>
-        
     </div>
     <div class="glass-card">
       <img src="/static/images/pragathi.png" >
       <div class="vl"></div>
-      
-       
        <div class="text">
-          <p>Pragathi and Saksham</p>
-            
-        </div>
-        
+          <p data-translate>Pragathi and Saksham</p>
+        </div>  
     </div>
-    
     </div>
     <div class="container1">
-    
-    
         <div class="glass-card">
           <img src="/static/images/innovation.png" >
-          <div class="vl"></div>
-      
-       
+          <div class="vl"></div>   
        <div class="text">
-          <p>India Innovation Initiative</p>
-            
-        </div>
-            
+          <p data-translate>India Innovation Initiative</p>
+        </div>     
         </div>
         <div class="glass-card">
           <img src="/static/images/women.png" >
           <div class="vl"></div>
-      
-       
        <div class="text">
-          <p>Women Empowerment</p>
-            
+          <p data-translate>Women Empowerment</p>
         </div>
-            
         </div>
         <div class="glass-card">
           <img src="/static/images/disabled.png" >
           <div class="vl"></div>
-      
-       
        <div class="text">
-          <p>Facilities for Differently Abled</p>
-            
+          <p data-translate>Facilities for Differently Abled</p>
         </div>
-            
         </div>
         <div class="glass-card">
           <img src="/static/images/Research.png" >
           <div class="vl"></div>
-      
-       
        <div class="text">
-          <p>Reasearch Funds</p>
-            
+          <p data-translate>Reasearch Funds</p>
         </div>
-        
         </div>
-        
-        
         </div>
     </div>
-  
-
     <!-- Chatbox -->
     <div class="chatbox" id="chatbox">
       <!-- Your chatbox content goes here -->
