--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,37 +20,37 @@
     <section id="sidebar">
       <a href="/templates/profile.html" class="brand">
         <i class="bx bxs-user-circle"></i>
-        <span class="text">Welcome ! </span>
+        <span class="text" data-translate>Welcome ! </span>
       </a>
       <ul class="side-menu top">
         <li class="active">
           <a href="#">
             <i class="bx bxs-dashboard"></i>
-            <span class="text">Dashboard</span>
+            <span class="text" data-translate>Dashboard</span>
           </a>
         </li>
         <li>
           <a href="/templates/vishaya.html">
             <i class="bx bx-bot"></i>
-            <span class="text">Vishaya</span>
+            <span class="text" data-translate>Vishaya</span>
           </a>
         </li>
         <li>
           <a href="#">
             <i class="bx bxs-doughnut-chart"></i>
-            <span class="text">Analytics</span>
+            <span class="text" data-translate>Analytics</span>
           </a>
         </li>
         <li>
           <a href="/templates/trialcheck.html">
             <i class="bx bxs-file-pdf"></i>
-            <span class="text">Trial Check</span>
+            <span class="text" data-translate>Trial Check</span>
           </a>
         </li>
         <li>
           <a href="#">
             <i class="bx bxs-file-archive"></i>
-            <span class="text">Document</span>
+            <span class="text" data-translate>Document</span>
           </a>
         </li>
       </ul>
@@ -58,13 +58,13 @@
         <li>
           <a href="/templates/settings.html">
             <i class="bx bxs-cog"></i>
-            <span class="text">Settings</span>
+            <span class="text" data-translate>Settings</span>
           </a>
         </li>
         <li>
-          <a href="/templates/index.html" class="logout">
+          <a href="{{ url_for('index') }}" class="logout">
             <i class="bx bxs-log-out-circle"></i>
-            <span class="text">Logout</span>
+            <span class="text" data-translate>Logout</span>
           </a>
         </li>
       </ul>
@@ -76,7 +76,7 @@
       <!-- NAVBAR -->
       <nav>
         <i class="bx bx-menu"></i>
-        <a href="#" class="nav-link">Categories</a>
+        <a href="#" class="nav-link" data-translate>Categories</a>
         <form action="#">
           <div class="form-input">
             <input type="search" placeholder="Search..." />
@@ -102,20 +102,20 @@
       <main>
         <div class="head-title">
           <div class="left">
-            <h1>Dashboard</h1>
+            <h1 data-translate>Dashboard</h1>
             <ul class="breadcrumb">
               <li>
-                <a href="#">Dashboard</a>
+                <a href="#" data-translate>Dashboard</a>
               </li>
               <li><i class="bx bx-chevron-right"></i></li>
               <li>
-                <a class="active" href="#">Home</a>
+                <a class="active" href="#" data-translate>Home</a>
               </li>
             </ul>
           </div>
           <a href="#" class="btn-download">
             <i class="bx bxs-cloud-download"></i>
-            <span class="text">Download PDF</span>
+            <span class="text" data-translate>Download PDF</span>
           </a>
         </div>
 
@@ -123,22 +123,22 @@
           <li>
             <i class="bx bxs-calendar-check"></i>
             <span class="text">
-              <h3>3000+</h3>
-              <p>Students</p>
+              <h3 data-translate>3000+</h3>
+              <p data-translate>Students</p>
             </span>
           </li>
           <li>
             <i class="bx bxs-group"></i>
             <span class="text">
-              <h3>365</h3>
-              <p>Faculties</p>
+              <h3 data-translate>365</h3>
+              <p data-translate>Faculties</p>
             </span>
           </li>
           <li>
             <i class="bx bxs-graduation"></i>
             <span class="text">
-              <h3>6</h3>
-              <p>Total Courses</p>
+              <h3 data-translate>6</h3>
+              <p data-translate>Total Courses</p>
             </span>
           </li>
         </ul>
@@ -146,87 +146,87 @@
         <div class="table-data">
           <div class="order">
             <div class="head">
-              <h3>Uploads</h3>
+              <h3 data-translate>Uploads</h3>
               <i class="bx bx-search"></i>
               <i class="bx bx-filter"></i>
             </div>
             <table>
               <thead>
                 <tr>
-                  <th>Sl no</th>
-                  <th>Due date</th>
-                  <th>Status</th>
+                  <th data-translate>Sl no</th>
+                  <th data-translate>Due date</th>
+                  <th data-translate>Status</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>
                     <h5>1</h5>
-                    <p>Doc 0</p>
+                    <p data-translate>Doc 0</p>
                   </td>
                   <td>01-10-2021</td>
-                  <td><span class="status completed">Completed</span></td>
+                  <td><span class="status completed" data-translate>Completed</span></td>
                 </tr>
                 <tr>
                   <td>
                     <h5>2</h5>
-                    <p>Doc 1</p>
+                    <p data-translate>Doc 1</p>
                   </td>
                   <td>01-10-2021</td>
-                  <td><span class="status pending">Pending</span></td>
+                  <td><span class="status pending" data-translate>Pending</span></td>
                 </tr>
                 <tr>
                   <td>
                     <h5>3</h5>
-                    <p>Doc 2</p>
+                    <p data-translate>Doc 2</p>
                   </td>
                   <td>01-10-2021</td>
-                  <td><span class="status process">Process</span></td>
+                  <td><span class="status process" data-translate>Process</span></td>
                 </tr>
                 <tr>
                   <td>
                     <h5>4</h5>
-                    <p>Doc 3</p>
+                    <p data-translate>Doc 3</p>
                   </td>
                   <td>01-10-2021</td>
-                  <td><span class="status pending">Pending</span></td>
+                  <td><span class="status pending" data-translate>Pending</span></td>
                 </tr>
                 <tr>
                   <td>
                     <h5>5</h5>
-                    <p>Doc 4</p>
+                    <p data-translate>Doc 4</p>
                   </td>
                   <td>01-10-2021</td>
-                  <td><span class="status completed">Completed</span></td>
+                  <td><span class="status completed" data-translate>Completed</span></td>
                 </tr>
               </tbody>
             </table>
           </div>
           <div class="todo">
             <div class="head">
-              <h3>Todos</h3>
+              <h3 data-translate>Todos</h3>
               <i class="bx bx-plus"></i>
               <i class="bx bx-filter"></i>
             </div>
             <ul class="todo-list">
               <li class="completed">
-                <p>Todo List</p>
+                <p data-translate>Todo List</p>
                 <i class="bx bx-dots-vertical-rounded"></i>
               </li>
               <li class="completed">
-                <p>Todo List</p>
+                <p data-translate>Todo List</p>
                 <i class="bx bx-dots-vertical-rounded"></i>
               </li>
               <li class="not-completed">
-                <p>Todo List</p>
+                <p data-translate>Todo List</p>
                 <i class="bx bx-dots-vertical-rounded"></i>
               </li>
               <li class="completed">
-                <p>Todo List</p>
+                <p data-translate>Todo List</p>
                 <i class="bx bx-dots-vertical-rounded"></i>
               </li>
               <li class="not-completed">
-                <p>Todo List</p>
+                <p data-translate>Todo List</p>
                 <i class="bx bx-dots-vertical-rounded"></i>
               </li>
             </ul>
