--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
     <link rel="title icon" href="/static/images/head.png" type="image/png" />
   </head>
   <body>
-    <div id="logo-container">
+    <!-- <div id="logo-container">
       <img id="load" src="/static/images/loader.jpg" alt="Logo" style="width: 350px; height: 300px">
-    </div>
+    </div> -->
     <div id="content">
     <header>
       <div>
@@ -213,24 +213,25 @@
         </div> -->
       </section>
     </main>
-    <div class="chatboy-icon" id="chatboy-icon" onclick="toggleChatbox()">
+    <!-- <div class="chatboy-icon" id="chatboy-icon" onclick="toggleChatbox()">
       <img
         src="/static/images/chatbot.png"
         alt="Chatboy Icon"
         width="50px"
         height="50px"
       />
-    </div>
+    </div> -->
+  
     <br><br><br><br>
   <div class="main">
     <div class="container">
-    <div class="glass-card">
+    <!-- <div class="glass-card">
        <img src="/static/images/pmsc.png" >
        <div class="vl"></div>
        <div class="text">
           <p data-translate>Prime Minister's Special Scholarship Scheme(PMSS)</p>
         </div>
-    </div>
+    </div> -->
     <div class="glass-card">
       <img src="/static/images/rural.png" >
       <div class="vl"></div>
@@ -292,9 +293,8 @@
         </div>
     </div>
     <!-- Chatbox -->
-    <div class="chatbox" id="chatbox">
-      <!-- Your chatbox content goes here -->
-      <p>User: Hello! I'm IBot.</p>
+    <!-- <div class="chatbox" id="chatbox">
+      <p>Ask me FAQ's</p>
       <div class="input-container">
         <input id="chatbot-input" type="text" placeholder="Type your message" />
         <button id="chatbot_upload" onclick="sendMessage()">
@@ -302,10 +302,27 @@
         </button>
         <div class="loading-dots"></div>
       </div>
-      <!-- Close button -->
       <span class="close-btn" onclick="toggleChatbox()">X</span>
+    </div> -->
+    <button id="chat-button" class="chat-button" onclick="toggleChatbox()" data-translate>Talk with Me</button>
+    
+    <div class="chat-box" id="chatbox">
+      <div class="chat-box-header">
+          <h3 data-translate>Message Us</h3>
+          <p onclick="unToggleChatbox()"><i class="fa fa-times"></i></p>
+      </div>
+      <div class="chat-box-body" id="chat-box-body">
+          <div class="chat-box-body-receive ">
+              <p data-translate="">Hi How may i help you ?</p>
+          </div>
+      </div>
+      <div class="chat-box-footer">
+          <input placeholder="Enter..." type="text" onkeydown="sendMessage(event)" />
+          <i class="send far fa-paper-plane"></i>
     </div>
+  </div>
 
+  </div>
     <footer class="foot">
       <div>
         <div class="footer-menu">
