--- a/static/css/login.css
+++ b/static/css/login.css
@@ -232,7 +232,9 @@ input[type="checkbox"]:checked::before {
   transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out,
     color 0.3s ease-in-out;
 }
-
+.otp-container {
+  display: none;
+}
 .login-btn:hover {
   border: 2px solid #4caf50; /* Green color */
   background: #4caf50; /* Green color */
