--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -182,7 +182,7 @@
                   </td>
                   <td><p>Doc 0</p></td>
                   <td>01-10-2021</td>
-                  <td><button type="button" class="btn btn-Upload">Upload&nbsp;<i class='bx bxs-up-arrow-circle'></i></button></td>
+                  <td><button type="button" class="btn btn-Upload" onclick="window.location.href='/addingFile'">Upload&nbsp;<i class='bx bxs-up-arrow-circle'></i></button></td>
                   <td><button type="button" class="btn btn-View">View&nbsp;<i class='bx bxs-file-doc'></i></button></td>
                     <td><button type="button" class="btn btn- Edit">Edit&nbsp;<i class='bx bxs-edit'></i></button></td>
               
