--- a/static/css/index.css
+++ b/static/css/index.css
@@ -439,7 +439,7 @@ transition: background-color .6s ease;
   }
 }
 
-/* #logo-container {
+#logo-container {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -447,25 +447,25 @@ transition: background-color .6s ease;
   top: 0;
   left: 0;
   background-color: #fff; /* Set background color as needed */
-  /* display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   opacity: 1;
   transition: opacity 1s ease-in-out;
   z-index: -1;
   margin: 0 0 0 0;
-} */ 
+} 
 
-/* #load {
+#load {
   width: 50%; /* Adjust the size of the logo */
-  /* height: auto;
+  height: auto;
   transition: transform 1s ease-in-out; /* Adjust the transition duration */
-/* } */
+}
 
-/*#content {
+#content {
   opacity: 0;
   transition: opacity 1s ease-in-out;
-}  */
+} 
 .card .text {
   flex: 1;
   display: flex;
